@@ -3,7 +3,7 @@
 # Also set the macro HAVE_DOS_FILE_CONTENTS for now,
 # since don't know of a good way to independently check this.
 dnl AC_DOSFILE()
-AC_DEFUN(AC_DOSFILE,
+AC_DEFUN([AC_DOSFILE],
 [
   AC_CACHE_CHECK([for dos file convention], ac_cv_dosfile,
     [if test -d ".\."; then
