@@ -3,7 +3,7 @@
 
 dnl AM_SEP()
 dnl SEP
-AC_DEFUN(AM_SEP,
+AC_DEFUN([AM_SEP],
 [AC_REQUIRE([AC_CYGWIN])
 AC_REQUIRE([AC_MINGW32])
 AC_REQUIRE([AC_DJGPP])
