@@ -2,14 +2,13 @@
 
 dnl From Paul Eggert.
 
-AC_PREREQ(2.13)
 
 # Define uintmax_t to `unsigned long' or `unsigned long long'
 # if <inttypes.h> does not exist.
 
-AC_DEFUN(jm_AC_TYPE_UINTMAX_T,
-[
-  AC_REQUIRE([jm_AC_HEADER_INTTYPES_H])
+AC_DEFUN([jm_AC_TYPE_UINTMAX_T],
+[AC_PREREQ(2.13)dnl
+  AC_REQUIRE([jm_AC_HEADER_INTTYPES_H])dnl
   if test $jm_ac_cv_header_inttypes_h = no; then
     AC_REQUIRE([jm_AC_TYPE_UNSIGNED_LONG_LONG])
     test $ac_cv_type_unsigned_long_long = yes \
