@@ -2,7 +2,7 @@
 
 dnl From Paul Eggert.
 
-AC_DEFUN(jm_AC_TYPE_UNSIGNED_LONG_LONG,
+AC_DEFUN([jm_AC_TYPE_UNSIGNED_LONG_LONG],
 [
   AC_CACHE_CHECK([for unsigned long long], ac_cv_type_unsigned_long_long,
   [AC_TRY_LINK([unsigned long long ull = 1; int i = 63;],
